# face-ai-detection-dlib

./: README.md  pyproject.toml
src/facedatectiondlib/: carasConocidas.csv  faceDetectionDLIB.ipynb  main.py
